--- a/T12_Panaderia/ES/pasteleria.html
+++ b/T12_Panaderia/ES/pasteleria.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Panadería</title>
+    <title>Pastelería</title>
     <link rel="stylesheet" href="/css/products.css">
 </head>
 <body>
@@ -23,65 +23,55 @@
                 <li class="lenguage-menu">
                     Idioma
                     <ul class="lenguage-list">
-                        <li><a href="/ES/panaderia.html">🇪🇸 Español</a></li>
-                        <li><a href="/PT/panaderia.html">🇵🇹 Portugues</a></li>
+                        <li><a href="/ES/pasteleria.html">🇪🇸 Español</a></li>
+                        <li><a href="/PT/pasteleria.html">🇵🇹 Portugues</a></li>
                     </ul>
                 </li>
             </ul>
         </nav>                                                                                                                                                                 
     </header>
     <main>
-        <h1>Panadería</h1>
+        <h1>Pastelería</h1>
         <section class="productos">
             <div class="producto">
-                <h2>Baguette</h2>
-                <img src="/img/products/panaderia/baguette.jpg" alt="baguette">
-                <p>Pan francés crujiente de harina, agua, levadura y sal.</p>
+                <h2>Croissant</h2>
+                <img src="/img/products/pasteleria/croissant.jpg" alt="croissant">
+                <p>Hojaldre francés mantecoso, ligero y crujiente.</p>
             </div>
             <div class="producto">
-                <h2>Ciabatta</h2>
-                <img src="/img/products/panaderia/ciabatta.jpg" alt="ciabatta">
-                <p>Pan italiano con miga aireada, de harina y aceite de oliva.</p>
+                <h2>Donut</h2>
+                <img src="/img/products/pasteleria/donut.jpg" alt="donut">
+                <p>Rosquilla dulce, frita o al horno, con glaseado.</p>
             </div>
             <div class="producto">
-                <h2>Focaccia</h2>
-                <img src="/img/products/panaderia/focaccia.jpg" alt="focaccia">
-                <p>Pan plano italiano, con hierbas y aceite de oliva.</p>
+                <h2>Pain au chocolat</h2>
+                <img src="/img/products/pasteleria/pain_au_chocolat.jpg" alt="pain_au_chocolat">
+                <p>Hojaldre relleno de chocolate, típico francés.</p>
             </div>
             <div class="producto">
-                <h2>Pan de centeno</h2>
-                <img src="/img/products/panaderia/pan_centeno.jpg" alt="pan_de_centeno">
-                <p>Pan denso de harina de centeno, agua y sal.</p>
+                <h2>Muffin</h2>
+                <img src="/img/products/pasteleria/muffin.jpg" alt="muffin">
+                <p>Bizcocho individual, suave, con frutas o chocolate.</p>
             </div>
             <div class="producto">
-                <h2>Pan brioche</h2>
-                <img src="/img/products/panaderia/brioche.jpg" alt="pan_de_brioche">
-                <p>Pan dulce y esponjoso, con huevos y mantequilla.</p>
+                <h2>Eclair</h2>
+                <img src="/img/products/pasteleria/eclairs.jpg" alt="eclair">
+                <p>Pasta choux rellena de crema y cubierta de chocolate.</p>
             </div>
             <div class="producto">
-                <h2>Pan de molde</h2>
-                <img src="/img/products/panaderia/pan_molde.jpg" alt="pan_de_molde">
-                <p>Suave y cuadrado, de harina, leche y mantequilla.</p>
+                <h2>Churro</h2>
+                <img src="/img/products/pasteleria/churro.jpg" alt="churro">
+                <p>Masa frita crujiente, espolvoreada con azúcar.</p>
             </div>
             <div class="producto">
-                <h2>Pan pita</h2>
-                <img src="/img/products/panaderia/pan_pita.jpg" alt="pan_pita">
-                <p>Pan plano delgado, ideal para rellenar.</p>
+                <h2>Napolitana</h2>
+                <img src="/img/products/pasteleria/napolitana.jpg" alt="napolitana">
+                <p>Hojaldre relleno de crema, chocolate o mermelada.</p>
             </div>
             <div class="producto">
-                <h2>Pan de maíz</h2>
-                <img src="/img/products/panaderia/pan_maiz.jpg" alt="pan_maiz">
-                <p>Pan dulce y denso, hecho con harina de maíz.</p>
-            </div>
-            <div class="producto">
-                <h2>Pan naan</h2>
-                <img src="/img/products/panaderia/pan_naan.jpg" alt="pan_naan">
-                <p>Pan indio plano, hecho con yogur y harina.</p>
-            </div>
-            <div class="producto">
-                <h2>Pan Sourdough</h2>
-                <img src="/img/products/panaderia/sourdough.jpg" alt="pan_sourdough">
-                <p>Pan de masa madre, con sabor ácido y miga densa.</p>
+                <h2>Cinnamon roll</h2>
+                <img src="/img/products/pasteleria/cinnamon_roll.jpg" alt="cinnamon_roll">
+                <p>Rollo dulce de canela, glaseado por encima.</p>
             </div>
         </section>
         <aside>
