--- a/T12_Panaderia/PT/index.html
+++ b/T12_Panaderia/PT/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio</title>
+    <title>Início</title>
     <link rel="stylesheet" href="/css/style.css">
     <script defer src="/js/script.js"></script>
 </head>
 <body>
     <header>
         <nav class="menu">
-            <a href="/ES/index.html"><img src="/img/logo.png" alt="Logo" class="logo"></a>
+            <a href="/PT/index.html"><img src="/img/logo.png" alt="Logo" class="logo"></a>
             <ul class="menu-list">
                 <li class="products-menu">
-                    Productos
+                    Produtos
                     <ul class="products-list">
-                        <li><a href="/ES/panaderia.html">Panadería</a></li>
-                        <li><a href="/ES/pasteleria.html">Pastelería</a></li>
-                        <li><a href="/ES/empanadas.html">Empanadas</a></li>
+                        <li><a href="/PT/panaderia.html">Padaria</a></li>
+                        <li><a href="/PT/pasteleria.html">Confeitaria</a></li>
+                        <li><a href="/PT/empanadas.html">Empanadas</a></li>
                     </ul>
                 </li>
                 
                 <li class="lenguage-menu">
                     Idioma
                     <ul class="lenguage-list">
-                        <li><a href="/ES/index.html">🇪🇸 Español</a></li>
-                        <li><a href="/PT/index.html">🇵🇹 Portugues</a></li>
+                        <li><a href="/ES/index.html">🇪🇸 Espanhol</a></li>
+                        <li><a href="/PT/index.html">🇵🇹 Português</a></li>
                     </ul>
                 </li>
             </ul>
@@ -33,40 +33,40 @@
     </header>
     <main>
         <section>
-            <h1>¿Quiénes somos?</h1>
-            <p>Somos una panadería artesanal ubicada en la frontera de la ciudad, dedicada a ofrecer productos locales y de alta calidad.</p>
+            <h1>Quem somos?</h1>
+            <p>Somos uma padaria artesanal localizada na fronteira da cidade, dedicada a oferecer produtos locais e de alta qualidade.</p>
         </section>
         <section class="extra">
             <section>
-                <h1>¿Donde está nuestro local?</h1>
+                <h1>Onde está o nosso estabelecimento?</h1>
                 <p>C. Vaduz, 23, 11130 Chiclana de la Frontera, Cádiz</p>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3211.001736247052!2d-6.154989925323616!3d36.409153289647186!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd0c35515ca7474d%3A0xe3a2331041b7fd34!2sPanaderia%20Migas%20Amigas!5e0!3m2!1ses!2ses!4v1737892919058!5m2!1ses!2ses" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </section>
             <section>
-                <h1>¿Como hacemos nuestros productos artesanales?</h1>
+                <h1>Como fazemos nossos produtos artesanais?</h1>
                 <div class="carousel">
                     <div class="carousel-item">
-                        <h2>Mezcla de Ingredientes</h2>
-                        <img src="/img/inicio/Mezcla.webp" alt="Mezcla de Ingredientes">
-                        <p>Comenzamos mezclando harina, agua, sal y masa madre para crear la base de nuestro pan.</p>
+                        <h2>Mistura de Ingredientes</h2>
+                        <img src="/img/inicio/Mezcla.webp" alt="Mistura de Ingredientes">
+                        <p>Começamos misturando farinha, água, sal e fermento natural para criar a base do nosso pão.</p>
                     </div>
                     <div class="carousel-item">
-                        <h2>Amasado</h2>
-                        <img src="/img/inicio/Masado.webp" alt="Amasado">
-                        <p>Después amasamos la masa hasta obtener una textura suave y elástica, lo que garantiza una buena estructura del pan.</p>
+                        <h2>Sovar</h2>
+                        <img src="/img/inicio/Masado.webp" alt="Sovar">
+                        <p>Depois, sovamos a massa até obter uma textura suave e elástica, garantindo uma boa estrutura do pão.</p>
                     </div>
                     <div class="carousel-item">
-                        <h2>Fermentación</h2>
-                        <img src="/img/inicio/Fermentar.webp" alt="Fermentación">
-                        <p>Posteriormente dejamos fermentar la masa durante varias horas para que desarrolle su sabor y textura característicos.</p>
+                        <h2>Fermentação</h2>
+                        <img src="/img/inicio/Fermentar.webp" alt="Fermentação">
+                        <p>Posteriormente, deixamos a massa fermentar por várias horas para desenvolver seu sabor e textura característicos.</p>
                     </div>
                     <div class="carousel-item">
-                        <h2>Horneado</h2>
-                        <img src="/img/inicio/Horneado.webp" alt="Horneado">
-                        <p>Finalmente horneamos el pan a la temperatura adecuada para obtener una corteza crujiente y un interior suave.</p>
+                        <h2>Assamento</h2>
+                        <img src="/img/inicio/Horneado.webp" alt="Assamento">
+                        <p>Finalmente, assamos o pão à temperatura ideal para obter uma crosta crocante e um interior macio.</p>
                     </div>
                     <button onclick="goToPrevItem()">Anterior</button>
-                    <button onclick="goToNextItem()">Siguiente</button>
+                    <button onclick="goToNextItem()">Próximo</button>
                 </div>
             </section>
         </section>
@@ -79,9 +79,9 @@
         </div>
         <p>© 2025 Migas Amigas</p>
         <div class="contacto">
-            <a href="">Contacto</a>
+            <a href="">Contato</a>
             <a href="">Aviso Legal</a>
-            <a href="">Política de Privacidad</a>
+            <a href="">Política de Privacidade</a>
         </div>
     </footer>
 </body>
