--- a/T12_Panaderia/PT/panaderia.html
+++ b/T12_Panaderia/PT/panaderia.html
@@ -1,96 +1,96 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Panadería</title>
+    <title>Panificação</title>
     <link rel="stylesheet" href="/css/products.css">
 </head>
 <body>
     <header>
         <nav class="menu">
-            <a href="/ES/index.html"><img src="/img/logo.png" alt="Logo" class="logo"></a>
+            <a href="/PT/index.html"><img src="/img/logo.png" alt="Logo" class="logo"></a>
             <ul class="menu-list">
                 <li class="products-menu">
-                    Productos
+                    Produtos
                     <ul class="products-list">
-                        <li><a href="/ES/panaderia.html">Panadería</a></li>
-                        <li><a href="/ES/pasteleria.html">Pastelería</a></li>
-                        <li><a href="/ES/empanadas.html">Empanadas</a></li>
+                        <li><a href="/PT/panificacao.html">Panificação</a></li>
+                        <li><a href="/PT/pasteleria.html">Pastelaria</a></li>
+                        <li><a href="/PT/empanadas.html">Empanadas</a></li>
                     </ul>
                 </li>
                 
                 <li class="lenguage-menu">
                     Idioma
                     <ul class="lenguage-list">
-                        <li><a href="/ES/panaderia.html">🇪🇸 Español</a></li>
-                        <li><a href="/PT/panaderia.html">🇵🇹 Portugues</a></li>
+                        <li><a href="/ES/panaderia.html">🇪🇸 Espanhol</a></li>
+                        <li><a href="/PT/panaderia.html">🇵🇹 Português</a></li>
                     </ul>
                 </li>
             </ul>
         </nav>                                                                                                                                                                 
     </header>
     <main>
-        <h1>Panadería</h1>
+        <h1>Panificação</h1>
         <section class="productos">
             <div class="producto">
-                <h2>Baguette</h2>
+                <h2>Baguete</h2>
                 <img src="/img/products/panaderia/baguette.jpg" alt="baguette">
-                <p>Pan francés crujiente de harina, agua, levadura y sal.</p>
+                <p>Pão francês crocante de farinha, água, fermento e sal.</p>
             </div>
             <div class="producto">
                 <h2>Ciabatta</h2>
                 <img src="/img/products/panaderia/ciabatta.jpg" alt="ciabatta">
-                <p>Pan italiano con miga aireada, de harina y aceite de oliva.</p>
+                <p>Pão italiano com miolo aerado, feito de farinha e azeite de oliva.</p>
             </div>
             <div class="producto">
                 <h2>Focaccia</h2>
                 <img src="/img/products/panaderia/focaccia.jpg" alt="focaccia">
-                <p>Pan plano italiano, con hierbas y aceite de oliva.</p>
+                <p>Pão italiano plano, com ervas e azeite de oliva.</p>
             </div>
             <div class="producto">
-                <h2>Pan de centeno</h2>
+                <h2>Pão de centeio</h2>
                 <img src="/img/products/panaderia/pan_centeno.jpg" alt="pan_de_centeno">
-                <p>Pan denso de harina de centeno, agua y sal.</p>
+                <p>Pão denso de farinha de centeio, água e sal.</p>
             </div>
             <div class="producto">
-                <h2>Pan brioche</h2>
+                <h2>Pão brioche</h2>
                 <img src="/img/products/panaderia/brioche.jpg" alt="pan_de_brioche">
-                <p>Pan dulce y esponjoso, con huevos y mantequilla.</p>
+                <p>Pão doce e macio, feito com ovos e manteiga.</p>
             </div>
             <div class="producto">
-                <h2>Pan de molde</h2>
+                <h2>Pão de forma</h2>
                 <img src="/img/products/panaderia/pan_molde.jpg" alt="pan_de_molde">
-                <p>Suave y cuadrado, de harina, leche y mantequilla.</p>
+                <p>Suave e quadrado, feito de farinha, leite e manteiga.</p>
             </div>
             <div class="producto">
-                <h2>Pan pita</h2>
+                <h2>Pão pita</h2>
                 <img src="/img/products/panaderia/pan_pita.jpg" alt="pan_pita">
-                <p>Pan plano delgado, ideal para rellenar.</p>
+                <p>Pão plano e fino, ideal para recheios.</p>
             </div>
             <div class="producto">
-                <h2>Pan de maíz</h2>
+                <h2>Pão de milho</h2>
                 <img src="/img/products/panaderia/pan_maiz.jpg" alt="pan_maiz">
-                <p>Pan dulce y denso, hecho con harina de maíz.</p>
+                <p>Pão doce e denso, feito com farinha de milho.</p>
             </div>
             <div class="producto">
-                <h2>Pan naan</h2>
+                <h2>Pão naan</h2>
                 <img src="/img/products/panaderia/pan_naan.jpg" alt="pan_naan">
-                <p>Pan indio plano, hecho con yogur y harina.</p>
+                <p>Pão indiano plano, feito com iogurte e farinha.</p>
             </div>
             <div class="producto">
-                <h2>Pan Sourdough</h2>
+                <h2>Pão Sourdough</h2>
                 <img src="/img/products/panaderia/sourdough.jpg" alt="pan_sourdough">
-                <p>Pan de masa madre, con sabor ácido y miga densa.</p>
+                <p>Pão de massa madre, com sabor ácido e miolo denso.</p>
             </div>
         </section>
         <aside>
-            <h2>Todos nuestros productos</h2>
+            <h2>Todos os nossos produtos</h2>
             <nav>
                 <ul>
-                    <li><a href="/ES/panaderia.html">Panadería</a></li>
-                    <li><a href="/ES/pasteleria.html">Pastelería</a></li>
-                    <li><a href="/ES/empanadas.html">Empanadas</a></li>
+                    <li><a href="/PT/panificacao.html">Panificação</a></li>
+                    <li><a href="/PT/pastelaria.html">Pastelaria</a></li>
+                    <li><a href="/PT/empanadas.html">Empanadas</a></li>
                 </ul>
             </nav>
         </aside>
@@ -104,9 +104,9 @@
         </div>
         <p>© 2025 Migas Amigas</p>
         <div class="contacto">
-            <a href="">Contacto</a>
+            <a href="">Contato</a>
             <a href="">Aviso Legal</a>
-            <a href="">Política de Privacidad</a>
+            <a href="">Política de Privacidade</a>
         </div>
     </footer>
 </body>
