--- a/T12_Panaderia/PT/panaderia.html
+++ b/T12_Panaderia/PT/panaderia.html
@@ -88,9 +88,9 @@
             <h2>Todos os nossos produtos</h2>
             <nav>
                 <ul>
-                    <li><a href="/PT/panificacao.html">Panificação</a></li>
-                    <li><a href="/PT/pastelaria.html">Pastelaria</a></li>
-                    <li><a href="/PT/empanadas.html">Empanadas</a></li>
+                    <li><a href="/PT/panaderia.html">Padaria</a></li>
+                        <li><a href="/PT/pasteleria.html">Confeitaria</a></li>
+                        <li><a href="/PT/empanadas.html">Empanadas</a></li>
                 </ul>
             </nav>
         </aside>
