--- a/T12_Panaderia/PT/index.html
+++ b/T12_Panaderia/PT/index.html
@@ -41,6 +41,8 @@
                 <h1>Onde está o nosso estabelecimento?</h1>
                 <p>C. Vaduz, 23, 11130 Chiclana de la Frontera, Cádiz</p>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3211.001736247052!2d-6.154989925323616!3d36.409153289647186!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd0c35515ca7474d%3A0xe3a2331041b7fd34!2sPanaderia%20Migas%20Amigas!5e0!3m2!1ses!2ses!4v1737892919058!5m2!1ses!2ses" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <h2>Nosso contato</h2>
+                <p>+34 123-456-789</p>
             </section>
             <section>
                 <h1>Como fazemos nossos produtos artesanais?</h1>
