--- a/T12_Panaderia/index.html
+++ b/T12_Panaderia/index.html
@@ -41,30 +41,29 @@
                 <h1>¿Donde está nuestro local?</h1>
                 <p>C. Vaduz, 23, 11130 Chiclana de la Frontera, Cádiz</p>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3211.001736247052!2d-6.154989925323616!3d36.409153289647186!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd0c35515ca7474d%3A0xe3a2331041b7fd34!2sPanaderia%20Migas%20Amigas!5e0!3m2!1ses!2ses!4v1737892919058!5m2!1ses!2ses" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                <h2>Nuestro numero de contacto</h2>
-                <p>+34 123-456-789</p>
+                <p>Tlf: +34 123-456-789</p>
             </section>
             <section>
                 <h1>¿Como hacemos nuestros productos artesanales?</h1>
                 <div class="carousel">
                     <div class="carousel-item">
                         <h2>Mezcla de Ingredientes</h2>
-                        <img src="/img/Mezcla.webp" alt="Mezcla de Ingredientes">
+                        <img src="/img/inicio/Mezcla.webp" alt="Mezcla de Ingredientes">
                         <p>Comenzamos mezclando harina, agua, sal y masa madre para crear la base de nuestro pan.</p>
                     </div>
                     <div class="carousel-item">
                         <h2>Amasado</h2>
-                        <img src="/img/Masado.webp" alt="Amasado">
+                        <img src="/img/inicio/Masado.webp" alt="Amasado">
                         <p>Después amasamos la masa hasta obtener una textura suave y elástica, lo que garantiza una buena estructura del pan.</p>
                     </div>
                     <div class="carousel-item">
                         <h2>Fermentación</h2>
-                        <img src="/img/Fermentar.webp" alt="Fermentación">
+                        <img src="/img/inicio/Fermentar.webp" alt="Fermentación">
                         <p>Posteriormente dejamos fermentar la masa durante varias horas para que desarrolle su sabor y textura característicos.</p>
                     </div>
                     <div class="carousel-item">
                         <h2>Horneado</h2>
-                        <img src="/img/Horneado.webp" alt="Horneado">
+                        <img src="/img/inicio/Horneado.webp" alt="Horneado">
                         <p>Finalmente horneamos el pan a la temperatura adecuada para obtener una corteza crujiente y un interior suave.</p>
                     </div>
                     <button onclick="goToPrevItem()">Anterior</button>
