--- a/T12_Panaderia/ES/pasteleria.html
+++ b/T12_Panaderia/ES/pasteleria.html
@@ -94,9 +94,7 @@
         </div>
         <p>© 2025 Migas Amigas</p>
         <div class="contacto">
-            <a href="">Contacto</a>
-            <a href="">Aviso Legal</a>
-            <a href="">Política de Privacidad</a>
+            <a href="/ES/contacto.html">Contacto</a>
         </div>
     </footer>
 </body>
