--- a/T12_Panaderia/PT/index.html
+++ b/T12_Panaderia/PT/index.html
@@ -80,9 +80,7 @@
         </div>
         <p>© 2025 Migas Amigas</p>
         <div class="contacto">
-            <a href="">Contato</a>
-            <a href="">Aviso Legal</a>
-            <a href="">Política de Privacidade</a>
+            <a href="/PT/contacto.html">Contacto</a>
         </div>
     </footer>
 </body>
