--- a/T12_Panaderia/ES/pasteleria.html
+++ b/T12_Panaderia/ES/pasteleria.html
@@ -9,22 +9,23 @@
 <body>
     <header>
         <nav class="menu">
-            <a href="/ES/index.html"><img src="/img/logo.png" alt="Logo" class="logo"></a>
+            <a href="/index.html"><img src="/img/logo.png" alt="Logo" class="logo"></a>
             <ul class="menu-list">
+                <li><a href="/ES/contacto.html">📞 Contacto</a></li>
+
                 <li class="products-menu">
-                    Productos
+                   🛒 Productos
                     <ul class="products-list">
-                        <li><a href="/ES/panaderia.html">Panadería</a></li>
-                        <li><a href="/ES/pasteleria.html">Pastelería</a></li>
-                        <li><a href="/ES/empanadas.html">Empanadas</a></li>
+                        <li><a href="/ES/panaderia.html">🥖 Panadería</a></li>
+                        <li><a href="/ES/pasteleria.html">🥧 Pastelería</a></li>
+                        <li><a href="/ES/empanadas.html">🥟 Empanadas</a></li>
                     </ul>
                 </li>
-                
                 <li class="lenguage-menu">
-                    Idioma
+                   🌐 Idioma
                     <ul class="lenguage-list">
-                        <li><a href="/ES/pasteleria.html">🇪🇸 Español</a></li>
-                        <li><a href="/PT/pasteleria.html">🇵🇹 Portugues</a></li>
+                        <li><a href="/ES/index.html">🇪🇸 Español</a></li>
+                        <li><a href="/PT/index.html">🇵🇹 Portugues</a></li>
                     </ul>
                 </li>
             </ul>
