--- a/T12_Panaderia/PT/contacto.html
+++ b/T12_Panaderia/PT/contacto.html
@@ -11,17 +11,18 @@
         <nav class="menu">
             <a href="/PT/index.html"><img src="/img/logo.png" alt="Logo" class="logo"></a>
             <ul class="menu-list">
+                <li><a href="/PT/contacto.html">📞 Contacto</a></li>
                 <li class="products-menu">
-                    Produtos
+                   🛒 Produtos
                     <ul class="products-list">
-                        <li><a href="/PT/panaderia.html">Padaria</a></li>
-                        <li><a href="/PT/pasteleria.html">Confeitaria</a></li>
-                        <li><a href="/PT/empanadas.html">Empanadas</a></li>
+                        <li><a href="/PT/panaderia.html">🥖 Padaria</a></li>
+                        <li><a href="/PT/pasteleria.html">🥧 Confeitaria</a></li>
+                        <li><a href="/PT/empanadas.html">🥟 Empanadas</a></li>
                     </ul>
                 </li>
                 
-                <li class="lenguage-menu">
-                    Idioma
+            <li class="lenguage-menu">
+                   🌐 Idioma
                     <ul class="lenguage-list">
                         <li><a href="/ES/contacto.html">🇪🇸 Espanhol</a></li>
                         <li><a href="/PT/contacto.html">🇵🇹 Português</a></li>
