--- a/T12_Panaderia/PT/index.html
+++ b/T12_Panaderia/PT/index.html
@@ -12,17 +12,18 @@
         <nav class="menu">
             <a href="/PT/index.html"><img src="/img/logo.png" alt="Logo" class="logo"></a>
             <ul class="menu-list">
+                <li><a href="/PT/contacto.html">📞 Contacto</a></li>
                 <li class="products-menu">
-                    Produtos
+                   🛒 Produtos
                     <ul class="products-list">
-                        <li><a href="/PT/panaderia.html">Padaria</a></li>
-                        <li><a href="/PT/pasteleria.html">Confeitaria</a></li>
-                        <li><a href="/PT/empanadas.html">Empanadas</a></li>
+                        <li><a href="/PT/panaderia.html">🥖 Padaria</a></li>
+                        <li><a href="/PT/pasteleria.html">🥧 Confeitaria</a></li>
+                        <li><a href="/PT/empanadas.html">🥟 Empanadas</a></li>
                     </ul>
                 </li>
                 
-                <li class="lenguage-menu">
-                    Idioma
+            <li class="lenguage-menu">
+                   🌐 Idioma
                     <ul class="lenguage-list">
                         <li><a href="/ES/index.html">🇪🇸 Espanhol</a></li>
                         <li><a href="/PT/index.html">🇵🇹 Português</a></li>
@@ -40,8 +41,13 @@
             <section>
                 <h1>Onde está o nosso estabelecimento?</h1>
                 <p>C. Vaduz, 23, 11130 Chiclana de la Frontera, Cádiz</p>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3211.001736247052!2d-6.154989925323616!3d36.409153289647186!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd0c35515ca7474d%3A0xe3a2331041b7fd34!2sPanaderia%20Migas%20Amigas!5e0!3m2!1ses!2ses!4v1737892919058!5m2!1ses!2ses" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                <p>Tlf: +34 123-456-789</p>
+                <iframe 
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3211.001736247052!2d-6.154989925323616!3d36.409153289647186!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd0c35515ca7474d%3A0xe3a2331041b7fd34!2sPanaderia%20Migas%20Amigas!5e0!3m2!1ses!2ses!4v1737892919058!5m2!1ses!2ses" 
+                    allowfullscreen 
+                    loading="lazy" 
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>                <br><br>
+                <a href="/PT/contacto.html">Entre em contato conosco</a>
             </section>
             <section>
                 <h1>Como fazemos nossos produtos artesanais?</h1>
