--- a/T12_Panaderia/ES/contacto.html
+++ b/T12_Panaderia/ES/contacto.html
@@ -35,8 +35,9 @@
         <h1>Contacto</h1>
         <p>¿Tienes alguna duda o sugerencia? ¡Escríbenos!</p>
         <form action="" method="post">
-            <input type="email" id="email" name="email" placeholder="Tu Correo" required>
-            <textarea id="message" name="message" rows="4" placeholder="Mensaje" required></textarea>
+            <input type="text" id="nombre" name="nombre" placeholder="👤 Tu Nombre" required>
+            <input type="email" id="email" name="email" placeholder="📧 Tu Correo" required>
+            <textarea id="message" name="message" rows="4" placeholder="📩 Mensaje" required></textarea>
             
             <button type="submit">Enviar</button>
         </form>
