--- a/T12_Panaderia/ES/panaderia.html
+++ b/T12_Panaderia/ES/panaderia.html
@@ -24,8 +24,8 @@
                 <li class="lenguage-menu">
                    🌐 Idioma
                     <ul class="lenguage-list">
-                        <li><a href="/ES/index.html">🇪🇸 Español</a></li>
-                        <li><a href="/PT/index.html">🇵🇹 Portugues</a></li>
+                        <li><a href="/ES/panaderia.html">🇪🇸 Español</a></li>
+                        <li><a href="/PT/panaderia.html">🇵🇹 Portugues</a></li>
                     </ul>
                 </li>
             </ul>
