--- a/T12_Panaderia/PT/contacto.html
+++ b/T12_Panaderia/PT/contacto.html
@@ -35,8 +35,9 @@
         <h1>Contato</h1>
         <p>Tem alguma dúvida ou sugestão? Escreva para nós!</p>
         <form action="" method="post">
-            <input type="email" id="email" name="email" placeholder="Seu Email" required>
-            <textarea id="message" name="message" rows="4" placeholder="Mensagem" required></textarea>
+            <input type="text" id="nombre" name="nombre" placeholder="👤 Seu Nome" required>
+            <input type="email" id="email" name="email" placeholder="📧 Seu Email" required>
+            <textarea id="message" name="message" rows="4" placeholder="📩 Mensagem" required></textarea>
             
             <button type="submit">Enviar</button>
         </form>
