--- a/T12_Panaderia/PT/index.html
+++ b/T12_Panaderia/PT/index.html
@@ -48,6 +48,7 @@
                     referrerpolicy="no-referrer-when-downgrade">
                 </iframe>                <br><br>
                 <a href="/PT/contacto.html">Entre em contato conosco</a>
+                <p>Tlf: +34 123 456 789</p>
             </section>
             <section>
                 <h1>Como fazemos nossos produtos artesanais?</h1>
