--- a/T12_Panaderia/PT/pasteleria.html
+++ b/T12_Panaderia/PT/pasteleria.html
@@ -24,8 +24,8 @@
             <li class="lenguage-menu">
                    🌐 Idioma
                     <ul class="lenguage-list">
-                        <li><a href="/ES/contacto.html">🇪🇸 Espanhol</a></li>
-                        <li><a href="/PT/contacto.html">🇵🇹 Português</a></li>
+                        <li><a href="/ES/pasteleria.html">🇪🇸 Espanhol</a></li>
+                        <li><a href="/PT/pasteleria.html">🇵🇹 Português</a></li>
                     </ul>
                 </li>
             </ul>
