--- a/T12_Panaderia/index.html
+++ b/T12_Panaderia/index.html
@@ -49,6 +49,7 @@
                 </iframe>
                 <br><br>
                 <a href="/ES/contacto.html">Contacta con nosotros</a>
+                <p>Tlf: +34 123 456 789</p>
             </section>
             <section>
                 <h1>¿Como hacemos nuestros productos artesanales?</h1>
