--- a/T13_Los40/index.html
+++ b/T13_Los40/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
 
-    <h1>Los 40 Principales</h1>
-
+    <img src="/img/Logo.webp" alt="Los 40 Principales" class="logo">
     <!-- Sección 1: Fotos de grupos musicales -->
     <h2>Fotos de Grupos Musicales</h2>
     <div class="grid-container">
@@ -28,60 +27,60 @@
     <h2>Videoclips</h2>
     <div class="grid-container">
         <div class="grid-item">
-            <iframe width="100%" height="auto" src="https://www.youtube.com/watch?v=pAgnJDJN4VA" frameborder="0" allowfullscreen></iframe>
+            <iframe width="100%" height="auto" src="/img/AC_DC.mp4" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="grid-item">
-            <iframe width="100%" height="auto" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
+            <iframe width="100%" height="auto" src="/img/Guns_N _Roses.mp4" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="grid-item">
-            <iframe width="100%" height="auto" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
+            <iframe width="100%" height="auto" src="/img/Led Zeppelin.mp4" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="grid-item">
-            <iframe width="100%" height="auto" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
+            <iframe width="100%" height="auto" src="/img/Metallica.mp4" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="grid-item">
-            <iframe width="100%" height="auto" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
+            <iframe width="100%" height="auto" src="/img/Nirvana.mp4" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="grid-item">
-            <iframe width="100%" height="auto" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
+            <iframe width="100%" height="auto" src="/img/Pink Floyd.mp4" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="grid-item">
-            <iframe width="100%" height="auto" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
+            <iframe width="100%" height="auto" src="/img/Queen.mp4" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="grid-item">
-            <iframe width="100%" height="auto" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
+            <iframe width="100%" height="auto" src="/img/The Beatles.mp4" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="grid-item">
-            <iframe width="100%" height="auto" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
+            <iframe width="100%" height="auto" src="/img/The Rolling Stones.mp4" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
 
     <!-- Sección 3: Enlaces @ -->
     <h2>Enlaces @</h2>
     <div class="grid-container">
-        <div class="grid-item"><a href="#">@Grupo1</a></div>
-        <div class="grid-item"><a href="#">@Grupo2</a></div>
-        <div class="grid-item"><a href="#">@Grupo3</a></div>
-        <div class="grid-item"><a href="#">@Grupo4</a></div>
-        <div class="grid-item"><a href="#">@Grupo5</a></div>
-        <div class="grid-item"><a href="#">@Grupo6</a></div>
-        <div class="grid-item"><a href="#">@Grupo7</a></div>
-        <div class="grid-item"><a href="#">@Grupo8</a></div>
-        <div class="grid-item"><a href="#">@Grupo9</a></div>
+        <div class="grid-item"><a href="mailto:acdc@gmail.com">@AC DC</a></div>
+        <div class="grid-item"><a href="mailto:gunsnroses@gmail.com">@Guns N' Roses</a></div>
+        <div class="grid-item"><a href="mailto:ledzeppelin@gmail.com">@Led Zeppelin</a></div>
+        <div class="grid-item"><a href="mailto:metallica@gmail.com">@Metallica</a></div>
+        <div class="grid-item"><a href="mailto:nirvana@gmail.com">@Nirvana</a></div>
+        <div class="grid-item"><a href="mailto:pinkfloyd@gmail.com">@Pink Floyd</a></div>
+        <div class="grid-item"><a href="mailto:queen@gmail.com">@Queen</a></div>
+        <div class="grid-item"><a href="mailto:thebeatles@gmail.com">@The Beatles</a></div>
+        <div class="grid-item"><a href="mailto:therollingstones@gmail.com">@The Rolling Stones</a></div>
     </div>
 
     <!-- Sección 4: Enlaces a páginas oficiales -->
     <h2>Enlaces a Páginas Oficiales</h2>
     <div class="grid-container">
-        <div class="grid-item"><a href="https://www.grupo1.com" target="_blank">Grupo 1</a></div>
-        <div class="grid-item"><a href="https://www.grupo2.com" target="_blank">Grupo 2</a></div>
-        <div class="grid-item"><a href="https://www.grupo3.com" target="_blank">Grupo 3</a></div>
-        <div class="grid-item"><a href="https://www.grupo4.com" target="_blank">Grupo 4</a></div>
-        <div class="grid-item"><a href="https://www.grupo5.com" target="_blank">Grupo 5</a></div>
-        <div class="grid-item"><a href="https://www.grupo6.com" target="_blank">Grupo 6</a></div>
-        <div class="grid-item"><a href="https://www.grupo7.com" target="_blank">Grupo 7</a></div>
-        <div class="grid-item"><a href="https://www.grupo8.com" target="_blank">Grupo 8</a></div>
-        <div class="grid-item"><a href="https://www.grupo9.com" target="_blank">Grupo 9</a></div>
+        <div class="grid-item"><a href="https://www.acdc.com/tour/">@AC DC</a></div>
+        <div class="grid-item"><a href="https://www.gunsnroses.com/">@Guns N' Roses</a></div>
+        <div class="grid-item"><a href="mailto:ledzeppelin@gmail.com">@Led Zeppelin</a></div>
+        <div class="grid-item"><a href="mailto:metallica@gmail.com">@Metallica</a></div>
+        <div class="grid-item"><a href="mailto:nirvana@gmail.com">@Nirvana</a></div>
+        <div class="grid-item"><a href="mailto:pinkfloyd@gmail.com">@Pink Floyd</a></div>
+        <div class="grid-item"><a href="mailto:queen@gmail.com">@Queen</a></div>
+        <div class="grid-item"><a href="mailto:thebeatles@gmail.com">@The Beatles</a></div>
+        <div class="grid-item"><a href="mailto:therollingstones@gmail.com">@The Rolling Stones</a></div>
     </div>
 
 </body>
