--- a/T12_Panaderia/ES/contacto.html
+++ b/T12_Panaderia/ES/contacto.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio</title>
+    <title>Contacto</title>
     <link rel="stylesheet" href="/css/contact.css">
 </head>
 <body>
